[package]
name = "keyboard-controller-gtk"
version = "0.1.0"
authors = ["Edouard Menayde <edouard.menayde@gmail.com>"]

[dependencies]
keyboard-brightness = { path = "../keyboard-brightness" }
time = "0.1"
json = "*"
log = "*"
env_logger = "*"
gdk-pixbuf = "0.1.3"

[dependencies.gtk]
version = "0.1.3"
features = ["v3_20"]